--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                      
                     </p>
 
-					<p style="text-align: center;">
+					<!-- <p style="text-align: center;">
 						<a class="button" href="#">...</a>
-					</p>
+					</p> -->
 				</div>
 			</div>
 
@@ -95,10 +95,10 @@
 				<div class="pra">
 					<p>Acestea sunt organisme prezente în mod natural în compost, dar fără ele nu poate rezulta un compost sănătos. 
                         De reținut însă că aceste vietăți nu vor părăsi niciodată compostul deoarece au nevoie de hrană.</p>
-
+<!-- 
 					<p style="text-align: center;">
 						<a class="button" href="#">...</a>
-					</p>
+					</p> -->
 				</div>
 			</div>
 
@@ -109,9 +109,9 @@
 					<p>Un proiect de compostare colectivă să se bazeze pe o echipă predefinită și cunoscută de către participanți.
                          Cu cât instrucțiunile sunt precise și clare,cu atât vor putea fi urmate de către participanții și zona va fi întreținută!</p>
 
-					<p style="text-align: center;">
+					<!-- <p style="text-align: center;">
 						<a class="button" href="#">...</a>
-					</p>
+					</p> -->
 				</div>
 			</div>
 
