--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 
     <section class="footer">
-        <p>Copyright 2023 - ...cxzdsafasfasfasdf
+        <p>Copyright 2023 - Liceul Ferdinand I
         </p>
 
     </section>
