--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,12 +15,8 @@
     <nav class="navbar">
         <img src="../imagini/logo.png" alt="" class="logo">
         <ul class="nav-links">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#tipuri_compost">Tipuri de compostare</a></li>
-            <li><a href="#de_ce">Avantajele compostării</a></li>
-            <li><a href="#sfaturi">Sfaturi și idei preconcepute</a></li>
-            <li><a href="#despre_noi">Cine suntem noi?</a></li>
-            <li class="ctn"><a href="pages/contact.html">Contact</a></li>
+
+            <li class="ctn"><a href="../index.html">Home</a></li>
         </ul>
         <img src="../imagini/menu.png" alt="" class="menu-btn">
     </nav>
