--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
             <div class="col content-col">
                 <h1>Cine suntem noi?</h1>
                 <!-- <div class="line"></div> -->
-                <p>Noi suntem un grup de elevi..... Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, sit! Nulla ex facilis officia odio eius veritatis repellat laudantium unde mollitia! Sunt perspiciatis minus obcaecati repellendus. Dicta ipsum laborum veritatis.</p>
+                <p>&emsp; Suntem elevii Liceului Tehnologic “Ferdinand I” și am desprins conceptul de natură-sursă de educație,pentru a transmite viitoarelor generații protejarea naturii și importanța compostării deșeurilor biodegradabile!
+                    În momentul de față principalii membrii ai grupului,sunt cinci elevi care au împlinit 18 ani și împreuna cu voluntarii care formează grupul țintă,vor să împărtășească tuturor elevilor instituției și nu numai ,faptul că dincolo de predarea unor cunoștințe necesare,educația trebuie să se ocupe cu deosebită atenție de ceea ce numim:conștință,caracter,stil de viață și mai ales grijă de natură!
+                    În cadrul liceului nostru,ne-am hotârât să demarăm acest proiect,în scopul de a pune tot mai mult accent pe ceea ce ține de natură.Fiind tineri elevi și viitorii adulți de mâine,ne dorim să transmitem tuturor că natura și educația sunt asemănătoare.Întreb-adevăr,educația transformă pe om și transformându-l,îi conferă o nouă natură!!</p>
                 <a href="#" class="ctn">Learn more</a>
             </div>
    
