--- a/index.html
+++ b/index.html
@@ -171,6 +171,24 @@
         </div>
         <div class="project-spacer"></div>
 
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Procedural Island Map Generator</h1>
+            <br>
+            <h2>Open Source</h2>
+            <p>I developed a Python module using Pygame that combines the power of Perlin noise with a 
+              custom-designed user interface to generate procedural island maps. The interactive
+               user interface, crafted by me, enhances the overall experience. This project demonstrates my experience in game
+                development, procedural generation techniques, and user interface design.
+            </p>
+            <p>You can download the project on <a href="https://github.com/PredaDavid/Pygame-Procedural-Generated-Map">Github</a>.</p>
+          </div>
+          <div class="project-img">
+            <img src="./img/island.gif" alt="img">
+          </div>
+        </div>
+        <div class="project-spacer"></div>
+
 
         <div class="project-item">
           <div class="project-info">
@@ -188,6 +206,9 @@
           </div>
         </div>
         <div class="project-spacer"></div>
+
+
+
 
       </div>
     </div>
