--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         <h1 class="section-title">About <span>me</span></h1>
         <h2>My journey to become a programmer</h2>
         <p>Hello! I am David, an 18-year-old college student.
-          I embarked on my programming journey four years ago, beginning with C++. Subsequently, I transitioned to game
-          development using Unity and C#, and eventually, I delved into the realm of creating intricate back-end systems
+          I embarked on my programming journey five years ago, beginning with C++. Subsequently, I transitioned to game
+          development using Unity and C# for around 3 years, and eventually, I delved into the realm of creating intricate back-end systems
           using Django, along with developing Python automations and basic machine learning models.
 
           I bring team-oriented experience and possess strong organizational skills. My adept problem-solving abilities
@@ -119,7 +119,7 @@
           Effective time management is another strength that I bring to the table.
 
         </p>
-        <a href="https://drive.google.com/file/d/1jJ3ul5s5_Q8hLrokEmC4pvc8Hh2sE-cT/view?usp=sharing"
+        <a href="https://drive.google.com/file/d/1n5unYbWwjjyzOLZiScsJpIRks9XfK5G9/view?usp=sharing"
           class="cta">Download Resume</a>
       </div>
     </div>
