--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/unity.jpg" alt="img">
+          <img src="./img/eu.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>My journey to become a programmer</h2>
-        <p>Hello! I am David, an 18-year-old college student.
+        <p>Hello! I am David, an 19-year-old university student.
           I embarked on my programming journey five years ago, beginning with C++. Subsequently, I transitioned to game
           development using Unity and C# for around 3 years, and eventually, I delved into the realm of creating intricate back-end systems
-          using Django, along with developing Python automations and basic machine learning models.
+          using Django, along with developing Python apps and automations.
 
           I bring team-oriented experience and possess strong organizational skills. My adept problem-solving abilities
           are complemented by a commitment to maintaining clean and efficient code. Additionally, I have engaged with
@@ -119,8 +119,8 @@
           Effective time management is another strength that I bring to the table.
 
         </p>
-        <a href="https://drive.google.com/file/d/1n5unYbWwjjyzOLZiScsJpIRks9XfK5G9/view?usp=sharing"
-          class="cta">Download Resume</a>
+        <a href="cv.html"
+          class="cta">My Resume</a>
       </div>
     </div>
   </section>
@@ -224,7 +224,7 @@
       <br><br>
       <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+          <div class="icon"><img src="img/github.png" /></div>
           <a href=""></a>
           <div class="contact-info">
             <h1>Github</h1>
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="icon"><img src="img/email.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
             <h2>davidpreda.dev@gmail.com</h2>
