--- a/cv.html
+++ b/cv.html
@@ -4,12 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
-  <link rel="stylesheet" href="cv-style.css">
+  <link rel="stylesheet" media="all" href="css/cv-style.css">
   <link rel="icon" href="img/icon.png">
   <title>David Preda</title>
 </head>
 
 <body>
+
+
+  <div class="download-wrapper">
+    <div class="download">
+
+      <a href="assets/PredaStefanDavid-CV.pdf" download>Download CV</a>
+      <a href="index.html">Home</a>
+    </div>
+  </div>
+
     <div class="main-container">
 
 
@@ -40,7 +50,7 @@
 
                 
                 <p>Python</p>
-                <div class="skill-bar container">
+                <div class="skill-bar">
                   <div class="skills"  style="width: 80%;">80%</div>
                 </div>
                 
@@ -50,12 +60,12 @@
                 </div>
 
                 <p>C++</p>
-                <div class="skill-bar container">
+                <div class="skill-bar">
                   <div class="skills"  style="width: 60%;">65%</div>
                 </div>
 
                 <p>HTML, CSS, JS</p>
-                <div class="skill-bar container">
+                <div class="skill-bar">
                   <div class="skills"  style="width: 50%;">65%</div>
                 </div>
             </div>
@@ -149,6 +159,8 @@
 
         </div>
     </div>
-</div>
+
+
+
 </body>
 </html>
