--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/icon.png">
   <title>David Preda</title>
 </head>
@@ -57,6 +57,18 @@
 
       </div>
       <div class="service-bottom">
+
+        <div class="service-item">
+          <div class="icon"><img src="img/django_logo.png" /></div>
+          <h2>Backend - Django</h2>
+          <p>
+            I have experience in web development using Python Django, I posses a good understanding in creating dynamic
+            and scalable web applications. My experience encompasses the end-to-end development process, from designing
+            and implementing robust backend systems to ensuring integration with frontend components.</p>
+        </div>
+
+
+
         <div class="service-item">
           <div class="icon"><img src="img/unity_logo.png" /></div>
           <h2>Game Development</h2>
@@ -74,21 +86,16 @@
             automated scripts to navigate websites, interact with dynamic elements, and extract relevant data.
           </p>
         </div>
+
+
+
         <div class="service-item">
-          <div class="icon"><img src="img/django_logo.png" /></div>
-          <h2>Backend - Django</h2>
-          <p>
-            I have experience in web development using Python Django, I posses a good understanding in creating dynamic
-            and scalable web applications. My experience encompasses the end-to-end development process, from designing
-            and implementing robust backend systems to ensuring integration with frontend components.</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="img/tensorflow_logo.png" /></div>
-          <h2>Machine learning</h2>
-          <p>I possess a foundation in machine learning using TensorFlow. My experience includes building and training
-            machine learning models. I have successfully applied supervised and unsupervised learning techniques, built
-            and trained neural networks, optimize model performance, and integrated machine learning solutions into
-            projects. </p>
+          <div class="icon"><img src="img/html_logo.png" /></div>
+          <h2>frontend</h2>
+          <p>Equipped with a solid foundation in frontend technologies such as HTML, CSS, and JS,
+             I have honed my skills through hands-on experience and continuous learning. 
+             My skills enables me to create responsive and visually appealing websites that resonate with users. 
+             I've tackled various projects ranging from simple landing pages to more complex applications.</p>
         </div>
 
       </div>
@@ -265,7 +272,7 @@
 
   </section>
   <!-- End Footer -->
-  <script src="./app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
