--- a/index.html
+++ b/index.html
@@ -137,6 +137,68 @@
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
+        <h1 class="section-title"> <span>Web</span> Projects</h1>
+      </div>
+
+      <div class="all-projects">
+        <div class="project-item">
+          <div class="project-info">
+            <h1>PC Builder</h1>
+            <h2>In Development</h2>
+            <br>
+            <p>
+              I have developed various web applications based on the Django framework, with the most complex application
+               being a PC configurator, which I am currently working on. Users can select desired components, 
+               and the application will calculate the total price of the system based on prices from major retailers 
+               in Romania. In addition to the core functionality, the application will feature a chat system for consulting 
+               with a representative, as well as a blog-building system to attract increased traffic to the website. The project
+                is still in development. A portion of the backend source code can be found on my <a href="https://github.com/PredaDavid/Best-PC">GitHub repository</a>.
+            </p>
+          </div>
+          <div class="project-img">
+            <img src="./img/web-app.gif" alt="img">
+          </div>
+        </div>
+        <div class="project-spacer"></div>
+
+        <div class="project-item">
+          <div class="project-img">
+            <img src="./img/static.gif" alt="img">
+          </div>
+          <div class="project-info">
+            <h1>Static Websites</h1>
+            <h2>Freelancing</h2>
+            <br>
+            <p>
+              I have developed static websites for various projects or clients. I have learned to adapt to the specific requirements 
+              of each client through effective communication and flexibility in project approach. 
+
+            </p>
+            <p>Two notable examples of websites created by me are: <a href="https://liceul-forestier-ramnicu-valcea.github.io/">Liceul Forestier Vâlcea</a> 
+            and <a href="https://nature-a-source-of-education.github.io/">Nature Source of Education</a> 
+            </p>
+          </div>
+
+        </div>
+        <div class="project-spacer"></div>
+
+
+        </div>
+
+        <div class="project-spacer"></div>
+
+
+
+
+      </div>
+    </div>
+
+
+<!-- GAME DEV Projects -->
+
+
+    <div class="projects container">
+      <div class="projects-header">
         <h1 class="section-title">Game <span>Dev</span> Projects</h1>
       </div>
 
